// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7989",
  "arbBalanceDelta1": "-0.010077",
  "backrun": Object {
    "delta0": "-9.7989",
    "delta1": "0.010077",
    "executionPrice": "0.0010284",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "9.5928",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099898",
  "executionPrice": "0.00099898",
  "priceAfter": "0.0000010393",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9936",
  "arbBalanceDelta1": "-0.0099000",
  "backrun": Object {
    "delta0": "-0.30578",
    "delta1": "0.0097639",
    "executionPrice": "0.031931",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "0.31217",
    "delta1": "-0.0096834",
    "executionPrice": "0.031020",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29624",
    "afterSandwich": "9.4939",
    "final": "9.7838",
  },
  "sandwichedPrice": "0.00098196",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7990",
  "arbBalanceDelta1": "-0.010229",
  "backrun": Object {
    "delta0": "-9.7990",
    "delta1": "0.010229",
    "executionPrice": "0.0010439",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "9.8868",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099898",
  "executionPrice": "0.00099898",
  "priceAfter": "0.0000010393",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9938",
  "arbBalanceDelta1": "-0.010052",
  "backrun": Object {
    "delta0": "-0.30593",
    "delta1": "0.0099158",
    "executionPrice": "0.032412",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "0.31217",
    "delta1": "-0.0096834",
    "executionPrice": "0.031020",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.30561",
    "afterSandwich": "9.7846",
    "final": "10.084",
  },
  "sandwichedPrice": "0.00098196",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7873",
  "arbBalanceDelta1": "-0.91412",
  "backrun": Object {
    "delta0": "-9.7873",
    "delta1": "0.91412",
    "executionPrice": "0.093398",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "8.6775",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90740",
  "executionPrice": "0.090740",
  "priceAfter": "0.0085750",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9409",
  "arbBalanceDelta1": "-0.89680",
  "backrun": Object {
    "delta0": "-2.2983",
    "delta1": "0.70028",
    "executionPrice": "0.30470",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "2.3574",
    "delta1": "-0.69788",
    "executionPrice": "0.29604",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6123",
    "afterSandwich": "7.2933",
    "final": "8.8453",
  },
  "sandwichedPrice": "0.089440",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8025",
  "arbBalanceDelta1": "-0.92931",
  "backrun": Object {
    "delta0": "-9.8025",
    "delta1": "0.92931",
    "executionPrice": "0.094804",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "8.9712",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90740",
  "executionPrice": "0.090740",
  "priceAfter": "0.0085750",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9561",
  "arbBalanceDelta1": "-0.91200",
  "backrun": Object {
    "delta0": "-2.3134",
    "delta1": "0.71548",
    "executionPrice": "0.30927",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "2.3574",
    "delta1": "-0.69788",
    "executionPrice": "0.29604",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6830",
    "afterSandwich": "7.5226",
    "final": "9.1436",
  },
  "sandwichedPrice": "0.089440",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.6823",
  "arbBalanceDelta1": "-4.9330",
  "backrun": Object {
    "delta0": "-9.6823",
    "delta1": "4.9330",
    "executionPrice": "0.50949",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "4.5556",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9492",
  "executionPrice": "0.49492",
  "priceAfter": "0.25510",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.8175",
  "arbBalanceDelta1": "-4.8134",
  "backrun": Object {
    "delta0": "-4.0454",
    "delta1": "2.8666",
    "executionPrice": "0.70861",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "2.4335e+13",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.2279",
    "delta1": "-2.9389",
    "executionPrice": "0.69512",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4335e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.2044",
    "afterSandwich": "3.7099",
    "final": "4.8077",
  },
  "sandwichedPrice": "0.48857",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8337",
  "arbBalanceDelta1": "-5.0850",
  "backrun": Object {
    "delta0": "-9.8337",
    "delta1": "5.0850",
    "executionPrice": "0.51710",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "4.8471",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9492",
  "executionPrice": "0.49492",
  "priceAfter": "0.25510",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9689",
  "arbBalanceDelta1": "-4.9661",
  "backrun": Object {
    "delta0": "-4.1967",
    "delta1": "3.0193",
    "executionPrice": "0.71943",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "2.4335e+13",
  },
  "collect": Object {
    "amount0": "0.20100",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.2279",
    "delta1": "-2.9389",
    "executionPrice": "0.69512",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4335e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.3313",
    "afterSandwich": "3.8830",
    "final": "5.1025",
  },
  "sandwichedPrice": "0.48857",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.7914",
  "arbBalanceDelta1": "-7.9319",
  "backrun": Object {
    "delta0": "-8.7914",
    "delta1": "7.9319",
    "executionPrice": "0.90223",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "0.68366",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0566",
  "executionPrice": "0.90566",
  "priceAfter": "0.82707",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.8224",
  "arbBalanceDelta1": "-7.8993",
  "backrun": Object {
    "delta0": "-3.7497",
    "delta1": "3.5385",
    "executionPrice": "0.94369",
  },
  "burn": Object {
    "amount0": "9.9587",
    "amount1": "3.2849e+13",
  },
  "collect": Object {
    "amount0": "0.041320",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.9273",
    "delta1": "-4.6864",
    "executionPrice": "0.95110",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2849e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.14238",
    "afterSandwich": "0.61047",
    "final": "0.74664",
  },
  "sandwichedPrice": "0.90471",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.305",
  "arbBalanceDelta1": "-9.4400",
  "backrun": Object {
    "delta0": "-10.305",
    "delta1": "9.4400",
    "executionPrice": "0.91604",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "0.96824",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0566",
  "executionPrice": "0.90566",
  "priceAfter": "0.82707",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.336",
  "arbBalanceDelta1": "-9.4040",
  "backrun": Object {
    "delta0": "-5.2635",
    "delta1": "5.0433",
    "executionPrice": "0.95816",
  },
  "burn": Object {
    "amount0": "9.9587",
    "amount1": "3.2849e+13",
  },
  "collect": Object {
    "amount0": "0.041320",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.9273",
    "delta1": "-4.6864",
    "executionPrice": "0.95110",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2849e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.29020",
    "afterSandwich": "0.76265",
    "final": "1.0355",
  },
  "sandwichedPrice": "0.90471",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7989",
  "arbBalanceDelta1": "-0.010077",
  "backrun": Object {
    "delta0": "-9.7989",
    "delta1": "0.010077",
    "executionPrice": "0.0010284",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "9.5928",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099898",
  "executionPrice": "0.00099898",
  "priceAfter": "0.0000010393",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9594",
  "arbBalanceDelta1": "-0.0099000",
  "backrun": Object {
    "delta0": "-0.30578",
    "delta1": "0.0097639",
    "executionPrice": "0.031931",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "0.31217",
    "delta1": "-0.0096834",
    "executionPrice": "0.031020",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29624",
    "afterSandwich": "9.4605",
    "final": "9.7503",
  },
  "sandwichedPrice": "0.00098196",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7990",
  "arbBalanceDelta1": "-0.010229",
  "backrun": Object {
    "delta0": "-9.7990",
    "delta1": "0.010229",
    "executionPrice": "0.0010439",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "9.8868",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099898",
  "executionPrice": "0.00099898",
  "priceAfter": "0.0000010393",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9596",
  "arbBalanceDelta1": "-0.010052",
  "backrun": Object {
    "delta0": "-0.30593",
    "delta1": "0.0099158",
    "executionPrice": "0.032412",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "0.31217",
    "delta1": "-0.0096834",
    "executionPrice": "0.031020",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.30561",
    "afterSandwich": "9.7501",
    "final": "10.049",
  },
  "sandwichedPrice": "0.00098196",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.7873",
  "arbBalanceDelta1": "-0.91412",
  "backrun": Object {
    "delta0": "-9.7873",
    "delta1": "0.91412",
    "executionPrice": "0.093398",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "8.6775",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90740",
  "executionPrice": "0.090740",
  "priceAfter": "0.0085750",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9068",
  "arbBalanceDelta1": "-0.89680",
  "backrun": Object {
    "delta0": "-2.2983",
    "delta1": "0.70028",
    "executionPrice": "0.30470",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "2.3574",
    "delta1": "-0.69788",
    "executionPrice": "0.29604",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6123",
    "afterSandwich": "7.2598",
    "final": "8.8118",
  },
  "sandwichedPrice": "0.089440",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8025",
  "arbBalanceDelta1": "-0.92931",
  "backrun": Object {
    "delta0": "-9.8025",
    "delta1": "0.92931",
    "executionPrice": "0.094804",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "8.9712",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90740",
  "executionPrice": "0.090740",
  "priceAfter": "0.0085750",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9219",
  "arbBalanceDelta1": "-0.91200",
  "backrun": Object {
    "delta0": "-2.3134",
    "delta1": "0.71548",
    "executionPrice": "0.30927",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "2.3574",
    "delta1": "-0.69788",
    "executionPrice": "0.29604",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6830",
    "afterSandwich": "7.4880",
    "final": "9.1091",
  },
  "sandwichedPrice": "0.089440",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.6823",
  "arbBalanceDelta1": "-4.9330",
  "backrun": Object {
    "delta0": "-9.6823",
    "delta1": "4.9330",
    "executionPrice": "0.50949",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "4.5556",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9492",
  "executionPrice": "0.49492",
  "priceAfter": "0.25510",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.7833",
  "arbBalanceDelta1": "-4.8134",
  "backrun": Object {
    "delta0": "-4.0454",
    "delta1": "2.8666",
    "executionPrice": "0.70861",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "2.4335e+13",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.2279",
    "delta1": "-2.9389",
    "executionPrice": "0.69512",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4335e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.2044",
    "afterSandwich": "3.6764",
    "final": "4.7743",
  },
  "sandwichedPrice": "0.48857",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8337",
  "arbBalanceDelta1": "-5.0850",
  "backrun": Object {
    "delta0": "-9.8337",
    "delta1": "5.0850",
    "executionPrice": "0.51710",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "4.8471",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9492",
  "executionPrice": "0.49492",
  "priceAfter": "0.25510",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9347",
  "arbBalanceDelta1": "-4.9661",
  "backrun": Object {
    "delta0": "-4.1967",
    "delta1": "3.0193",
    "executionPrice": "0.71943",
  },
  "burn": Object {
    "amount0": "9.7990",
    "amount1": "2.4335e+13",
  },
  "collect": Object {
    "amount0": "0.16683",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.2279",
    "delta1": "-2.9389",
    "executionPrice": "0.69512",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4335e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.3313",
    "afterSandwich": "3.8485",
    "final": "5.0680",
  },
  "sandwichedPrice": "0.48857",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.7914",
  "arbBalanceDelta1": "-7.9319",
  "backrun": Object {
    "delta0": "-8.7914",
    "delta1": "7.9319",
    "executionPrice": "0.90223",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "0.68366",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0566",
  "executionPrice": "0.90566",
  "priceAfter": "0.82707",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.8153",
  "arbBalanceDelta1": "-7.8993",
  "backrun": Object {
    "delta0": "-3.7497",
    "delta1": "3.5385",
    "executionPrice": "0.94369",
  },
  "burn": Object {
    "amount0": "9.9587",
    "amount1": "3.2849e+13",
  },
  "collect": Object {
    "amount0": "0.034296",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.9273",
    "delta1": "-4.6864",
    "executionPrice": "0.95110",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2849e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.14238",
    "afterSandwich": "0.60359",
    "final": "0.73975",
  },
  "sandwichedPrice": "0.90471",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.305",
  "arbBalanceDelta1": "-9.4400",
  "backrun": Object {
    "delta0": "-10.305",
    "delta1": "9.4400",
    "executionPrice": "0.91604",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "0.96824",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0566",
  "executionPrice": "0.90566",
  "priceAfter": "0.82707",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.329",
  "arbBalanceDelta1": "-9.4040",
  "backrun": Object {
    "delta0": "-5.2635",
    "delta1": "5.0433",
    "executionPrice": "0.95816",
  },
  "burn": Object {
    "amount0": "9.9587",
    "amount1": "3.2849e+13",
  },
  "collect": Object {
    "amount0": "0.034296",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.9273",
    "delta1": "-4.6864",
    "executionPrice": "0.95110",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2849e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.29020",
    "afterSandwich": "0.75556",
    "final": "1.0284",
  },
  "sandwichedPrice": "0.90471",
}
`;
